@@ -10,6 +10,7 @@ version <next>:
 - Add new mode to cropdetect filter to detect crop-area based on motion vectors and edges
 - VAAPI decoding and encoding for 8bit 444 HEVC and VP9
 - WBMP (Wireless Application Protocol Bitmap) image format
+- MO (Mobiclip on Wii) support
 
 
 version 5.1:
